--- a/android/app/src/main/res/values-pl/plurals.xml
+++ b/android/app/src/main/res/values-pl/plurals.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <plurals name="account_credit_expires_in_days">
+        <item quantity="one">1 dzień</item>
+        <item quantity="few">%1$d dni</item>
+        <item quantity="many">%1$d dni</item>
+        <item quantity="other">%1$d dnia</item>
+    </plurals>
     <plurals name="days_left">
         <item quantity="one">Pozostał 1 dzień</item>
         <item quantity="few">Pozostały %1$d dni</item>
@@ -47,17 +53,5 @@
         <item quantity="few">%1$d godziny temu</item>
         <item quantity="many">%1$d godzin temu</item>
         <item quantity="other">%1$d godzuny temu</item>
-    </plurals>
-    <plurals name="account_credit_expires_in_days">
-        <item quantity="one">Doładowanie konta wygasa za 1 dzień</item>
-        <item quantity="few">Doładowanie konta wygasa za %1$d dni</item>
-        <item quantity="many">Doładowanie konta wygasa za %1$d dni</item>
-        <item quantity="other">Doładowanie konta wygasa za %1$d dnia</item>
-    </plurals>
-    <plurals name="account_credit_expires_in_hours">
-        <item quantity="one">Doładowanie konta wygasa za 1 godzinę</item>
-        <item quantity="few">Doładowanie konta wygasa za %1$d godziny</item>
-        <item quantity="many">Doładowanie konta wygasa za %1$d godzin</item>
-        <item quantity="other">Doładowanie konta wygasa za %1$d godziny</item>
     </plurals>
 </resources>
