--- a/android/app/src/main/res/values-de/plurals.xml
+++ b/android/app/src/main/res/values-de/plurals.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <plurals name="account_credit_expires_in_days">
+        <item quantity="one">1 Tag</item>
+        <item quantity="other">%1$d Tage</item>
+    </plurals>
     <plurals name="days_left">
         <item quantity="one">1 Tag übrig</item>
         <item quantity="other">%1$d Tage übrig</item>
@@ -31,13 +35,5 @@
     <plurals name="hours_ago">
         <item quantity="one">vor einer Stunde</item>
         <item quantity="other">vor %1$d Stunden</item>
-    </plurals>
-    <plurals name="account_credit_expires_in_days">
-        <item quantity="one">Kontoguthaben läuft in einem Tag ab</item>
-        <item quantity="other">Kontoguthaben läuft in %1$d Tagen ab</item>
-    </plurals>
-    <plurals name="account_credit_expires_in_hours">
-        <item quantity="one">Kontoguthaben läuft in einer Stunde ab</item>
-        <item quantity="other">Kontoguthaben läuft in %1$d Stunden ab</item>
     </plurals>
 </resources>
