--- a/android/app/src/main/res/values-es/plurals.xml
+++ b/android/app/src/main/res/values-es/plurals.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <plurals name="account_credit_expires_in_days">
+        <item quantity="one">1 día</item>
+        <item quantity="other">%1$d días</item>
+    </plurals>
     <plurals name="days_left">
         <item quantity="one">Queda 1 día</item>
         <item quantity="other">Quedan %1$d días</item>
@@ -31,13 +35,5 @@
     <plurals name="hours_ago">
         <item quantity="one">hace una hora</item>
         <item quantity="other">hace %1$d horas</item>
-    </plurals>
-    <plurals name="account_credit_expires_in_days">
-        <item quantity="one">El crédito de la cuenta caduca en un día</item>
-        <item quantity="other">El crédito de la cuenta caduca en %1$d días</item>
-    </plurals>
-    <plurals name="account_credit_expires_in_hours">
-        <item quantity="one">El crédito de la cuenta caduca en una hora</item>
-        <item quantity="other">El crédito de la cuenta caduca en %1$d horas</item>
     </plurals>
 </resources>
