--- a/android/app/src/main/res/values-fi/plurals.xml
+++ b/android/app/src/main/res/values-fi/plurals.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <plurals name="account_credit_expires_in_days">
+        <item quantity="one">1 päivä</item>
+        <item quantity="other">%1$d päivää</item>
+    </plurals>
     <plurals name="days_left">
         <item quantity="one">1 päivä jäljellä</item>
         <item quantity="other">%1$d päivää jäljellä</item>
@@ -31,13 +35,5 @@
     <plurals name="hours_ago">
         <item quantity="one">tunti sitten</item>
         <item quantity="other">%1$d tuntia sitten</item>
-    </plurals>
-    <plurals name="account_credit_expires_in_days">
-        <item quantity="one">Tilin käyttöaika päättyy vuorokauden kuluttua</item>
-        <item quantity="other">Tilin käyttöaika päättyy %1$d vuorokauden kuluttua</item>
-    </plurals>
-    <plurals name="account_credit_expires_in_hours">
-        <item quantity="one">Tilin käyttöaika päättyy tunnin kuluttua</item>
-        <item quantity="other">Tilin käyttöaika päättyy %1$d tunnin kuluttua</item>
     </plurals>
 </resources>
