--- a/android/app/src/main/res/values-it/plurals.xml
+++ b/android/app/src/main/res/values-it/plurals.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <plurals name="account_credit_expires_in_days">
+        <item quantity="one">1 giorno</item>
+        <item quantity="other">%1$d giorni</item>
+    </plurals>
     <plurals name="days_left">
         <item quantity="one">1 giorno rimanente</item>
         <item quantity="other">%1$d giorni rimanenti</item>
@@ -31,13 +35,5 @@
     <plurals name="hours_ago">
         <item quantity="one">un\'ora fa</item>
         <item quantity="other">%1$d ore fa</item>
-    </plurals>
-    <plurals name="account_credit_expires_in_days">
-        <item quantity="one">Il credito dell\'account scade tra un giorno</item>
-        <item quantity="other">Il credito dell\'account scade tra %1$d giorni</item>
-    </plurals>
-    <plurals name="account_credit_expires_in_hours">
-        <item quantity="one">Il credito dell\'account scade tra un\'ora</item>
-        <item quantity="other">Il credito dell\'account scade tra %1$d ore</item>
     </plurals>
 </resources>
