--- a/android/app/src/main/res/values-nb/plurals.xml
+++ b/android/app/src/main/res/values-nb/plurals.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <plurals name="account_credit_expires_in_days">
+        <item quantity="one">1 dag</item>
+        <item quantity="other">%1$d dager</item>
+    </plurals>
     <plurals name="days_left">
         <item quantity="one">1 dag igjen</item>
         <item quantity="other">%1$d dager igjen</item>
@@ -31,13 +35,5 @@
     <plurals name="hours_ago">
         <item quantity="one">én time siden</item>
         <item quantity="other">%1$d timer siden</item>
-    </plurals>
-    <plurals name="account_credit_expires_in_days">
-        <item quantity="one">Kontokreditt utløper om én dag</item>
-        <item quantity="other">Kontokreditt utløper om %1$d dager</item>
-    </plurals>
-    <plurals name="account_credit_expires_in_hours">
-        <item quantity="one">Kontokreditt utløper om én time</item>
-        <item quantity="other">Kontokreditt utløper om %1$d timer</item>
     </plurals>
 </resources>
