--- a/android/app/src/main/res/values-nl/plurals.xml
+++ b/android/app/src/main/res/values-nl/plurals.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <plurals name="account_credit_expires_in_days">
+        <item quantity="one">1 dag</item>
+        <item quantity="other">%1$d dagen</item>
+    </plurals>
     <plurals name="days_left">
         <item quantity="one">1 dag resterend</item>
         <item quantity="other">%1$d dagen resterend</item>
@@ -31,13 +35,5 @@
     <plurals name="hours_ago">
         <item quantity="one">een uur geleden</item>
         <item quantity="other">%1$d uur geleden</item>
-    </plurals>
-    <plurals name="account_credit_expires_in_days">
-        <item quantity="one">Accountkrediet verloopt over een dag</item>
-        <item quantity="other">Accountkrediet verloopt over %1$d dagen</item>
-    </plurals>
-    <plurals name="account_credit_expires_in_hours">
-        <item quantity="one">Accountkrediet verloopt over een uur</item>
-        <item quantity="other">Accountkrediet verloopt over %1$d uur</item>
     </plurals>
 </resources>
