--- a/android/app/src/main/res/values-pt/plurals.xml
+++ b/android/app/src/main/res/values-pt/plurals.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <plurals name="account_credit_expires_in_days">
+        <item quantity="one">1 dia</item>
+        <item quantity="other">%1$d dias</item>
+    </plurals>
     <plurals name="days_left">
         <item quantity="one">1 dia restante</item>
         <item quantity="other">%1$d dias restantes</item>
@@ -31,13 +35,5 @@
     <plurals name="hours_ago">
         <item quantity="one">há uma hora</item>
         <item quantity="other">há %1$d horas</item>
-    </plurals>
-    <plurals name="account_credit_expires_in_days">
-        <item quantity="one">O crédito da conta expira dentro de um dia</item>
-        <item quantity="other">O crédito da conta expira dentro de %1$d dias</item>
-    </plurals>
-    <plurals name="account_credit_expires_in_hours">
-        <item quantity="one">O crédito da conta expira dentro de uma hora</item>
-        <item quantity="other">O crédito da conta expira dentro de %1$d horas</item>
     </plurals>
 </resources>
