--- a/android/app/src/main/res/values-ru/plurals.xml
+++ b/android/app/src/main/res/values-ru/plurals.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <plurals name="account_credit_expires_in_days">
+        <item quantity="one">%1$d день</item>
+        <item quantity="few">%1$d дня</item>
+        <item quantity="many">%1$d дней</item>
+        <item quantity="other">%1$d дня</item>
+    </plurals>
     <plurals name="days_left">
         <item quantity="one">Остался %1$d день</item>
         <item quantity="few">Осталось %1$d дня</item>
@@ -47,17 +53,5 @@
         <item quantity="few">%1$d часа назад</item>
         <item quantity="many">%1$d часов назад</item>
         <item quantity="other">%1$d часа назад</item>
-    </plurals>
-    <plurals name="account_credit_expires_in_days">
-        <item quantity="one">Срок действия баланса учетной записи истекает через %1$d день</item>
-        <item quantity="few">Срок действия баланса учетной записи истекает через %1$d дня</item>
-        <item quantity="many">Срок действия баланса учетной записи истекает через %1$d дней</item>
-        <item quantity="other">Срок действия баланса учетной записи истекает через %1$d дня</item>
-    </plurals>
-    <plurals name="account_credit_expires_in_hours">
-        <item quantity="one">Срок действия баланса учетной записи истекает через %1$d час</item>
-        <item quantity="few">Срок действия баланса учетной записи истекает через %1$d часа</item>
-        <item quantity="many">Срок действия баланса учетной записи истекает через %1$d часов</item>
-        <item quantity="other">Срок действия баланса учетной записи истекает через %1$d часа</item>
     </plurals>
 </resources>
